--- a/website/page.html
+++ b/website/page.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <input id="zip" placeholder="enter zip code here">
-        <textarea id="feelings"></textarea>
+        <textarea id="feelings" placeholder="How are you feeling today?"></textarea>
         <button id="generate">Get Data</button>
         <div id="entryHolder">
             <div id="date"></div>
